--- a/carpoolApp_v1.0/Base.lproj/Main.storyboard
+++ b/carpoolApp_v1.0/Base.lproj/Main.storyboard
@@ -10923,13 +10923,6 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4rA-SL-88X">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" placeholder="If you'd like, please enter any additional details." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KD6-2U-aa1">
-                                        <rect key="frame" x="-25" y="-30" width="97" height="30"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
-                                    </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Any details to add?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEu-AM-Vyk">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <constraints>
@@ -10949,8 +10942,7 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                                                 <exclude reference="zbW-6Y-zyN"/>
                                             </mask>
                                         </variation>
-                                        <variation key="widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="20" y="10" width="360" height="31"/>
+                                        <variation key="widthClass=compact">
                                             <mask key="constraints">
                                                 <include reference="jAJ-jN-EGe"/>
                                                 <exclude reference="zbW-6Y-zyN"/>
@@ -10978,30 +10970,35 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                                             <action selector="closeTextFieldButtonPressed:" destination="htI-jB-qlc" eventType="touchUpInside" id="MFl-Hs-xHT"/>
                                         </connections>
                                     </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZB-DQ-X8H">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done"/>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="KD6-2U-aa1" firstAttribute="leading" secondItem="4rA-SL-88X" secondAttribute="leading" constant="8" id="4OR-Fi-bmd">
-                                        <variation key="widthClass=compact" constant="20"/>
-                                    </constraint>
-                                    <constraint firstAttribute="trailing" secondItem="KD6-2U-aa1" secondAttribute="trailing" constant="8" id="6Tt-Kj-beZ">
-                                        <variation key="widthClass=compact" constant="20"/>
-                                    </constraint>
-                                    <constraint firstItem="AFR-9k-S7F" firstAttribute="top" secondItem="KD6-2U-aa1" secondAttribute="bottom" constant="18" id="9fy-MZ-wgE">
-                                        <variation key="widthClass=compact" constant="5"/>
-                                    </constraint>
                                     <constraint firstItem="AFR-9k-S7F" firstAttribute="centerX" secondItem="4rA-SL-88X" secondAttribute="centerX" id="EGR-He-Ot7"/>
-                                    <constraint firstItem="PEu-AM-Vyk" firstAttribute="top" secondItem="4rA-SL-88X" secondAttribute="top" constant="8" id="Gdv-EC-Lal">
-                                        <variation key="widthClass=compact" constant="10"/>
+                                    <constraint firstItem="QZB-DQ-X8H" firstAttribute="leading" secondItem="4rA-SL-88X" secondAttribute="leading" constant="27" id="Eil-31-dYr">
+                                        <variation key="widthClass=compact" constant="20"/>
                                     </constraint>
-                                    <constraint firstItem="KD6-2U-aa1" firstAttribute="top" secondItem="PEu-AM-Vyk" secondAttribute="bottom" constant="18" id="JDO-mY-OF0">
+                                    <constraint firstItem="PEu-AM-Vyk" firstAttribute="top" secondItem="4rA-SL-88X" secondAttribute="top" constant="8" id="Gdv-EC-Lal">
+                                        <variation key="widthClass=compact" constant="15"/>
+                                    </constraint>
+                                    <constraint firstAttribute="trailing" secondItem="QZB-DQ-X8H" secondAttribute="trailing" constant="20" id="aDV-na-W8a"/>
+                                    <constraint firstItem="AFR-9k-S7F" firstAttribute="top" secondItem="QZB-DQ-X8H" secondAttribute="bottom" constant="8" id="i4C-M4-n4W">
                                         <variation key="widthClass=compact" constant="10"/>
                                     </constraint>
                                     <constraint firstAttribute="bottom" secondItem="AFR-9k-S7F" secondAttribute="bottom" id="iUJ-nH-h8x">
-                                        <variation key="widthClass=compact" constant="5"/>
+                                        <variation key="widthClass=compact" constant="10"/>
                                     </constraint>
                                     <constraint firstAttribute="trailing" secondItem="PEu-AM-Vyk" secondAttribute="trailing" constant="47" id="j8d-dA-Gjl">
                                         <variation key="widthClass=compact" constant="20"/>
+                                    </constraint>
+                                    <constraint firstItem="QZB-DQ-X8H" firstAttribute="top" secondItem="PEu-AM-Vyk" secondAttribute="bottom" priority="999" constant="2" id="p2c-qZ-JTI">
+                                        <variation key="widthClass=compact" constant="15"/>
                                     </constraint>
                                     <constraint firstItem="PEu-AM-Vyk" firstAttribute="leading" secondItem="4rA-SL-88X" secondAttribute="leading" constant="8" id="t0d-sW-qoW">
                                         <variation key="widthClass=compact" constant="20"/>
@@ -11009,37 +11006,37 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
-                                        <exclude reference="KD6-2U-aa1"/>
                                         <exclude reference="PEu-AM-Vyk"/>
                                         <exclude reference="AFR-9k-S7F"/>
+                                        <exclude reference="QZB-DQ-X8H"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="Gdv-EC-Lal"/>
                                         <exclude reference="j8d-dA-Gjl"/>
                                         <exclude reference="t0d-sW-qoW"/>
-                                        <exclude reference="4OR-Fi-bmd"/>
-                                        <exclude reference="6Tt-Kj-beZ"/>
-                                        <exclude reference="JDO-mY-OF0"/>
-                                        <exclude reference="9fy-MZ-wgE"/>
+                                        <exclude reference="Eil-31-dYr"/>
+                                        <exclude reference="aDV-na-W8a"/>
+                                        <exclude reference="p2c-qZ-JTI"/>
                                         <exclude reference="EGR-He-Ot7"/>
+                                        <exclude reference="i4C-M4-n4W"/>
                                         <exclude reference="iUJ-nH-h8x"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="subviews">
-                                        <include reference="KD6-2U-aa1"/>
                                         <include reference="PEu-AM-Vyk"/>
                                         <include reference="AFR-9k-S7F"/>
+                                        <include reference="QZB-DQ-X8H"/>
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="Gdv-EC-Lal"/>
                                         <include reference="j8d-dA-Gjl"/>
                                         <include reference="t0d-sW-qoW"/>
-                                        <include reference="4OR-Fi-bmd"/>
-                                        <include reference="6Tt-Kj-beZ"/>
-                                        <include reference="JDO-mY-OF0"/>
-                                        <include reference="9fy-MZ-wgE"/>
+                                        <include reference="Eil-31-dYr"/>
+                                        <include reference="aDV-na-W8a"/>
+                                        <include reference="p2c-qZ-JTI"/>
                                         <include reference="EGR-He-Ot7"/>
+                                        <include reference="i4C-M4-n4W"/>
                                         <include reference="iUJ-nH-h8x"/>
                                     </mask>
                                 </variation>
@@ -11074,7 +11071,9 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                             <constraint firstItem="1Bl-Pm-tKo" firstAttribute="top" secondItem="uIH-2I-TXi" secondAttribute="bottom" constant="8" id="eTN-Yd-MoX">
                                 <variation key="widthClass=compact" constant="10"/>
                             </constraint>
-                            <constraint firstItem="4rA-SL-88X" firstAttribute="top" secondItem="N9k-Eg-jzj" secondAttribute="bottom" constant="270" id="hW9-w0-x3l"/>
+                            <constraint firstItem="4rA-SL-88X" firstAttribute="top" secondItem="N9k-Eg-jzj" secondAttribute="bottom" constant="270" id="hW9-w0-x3l">
+                                <variation key="widthClass=compact" constant="280"/>
+                            </constraint>
                             <constraint firstItem="uIH-2I-TXi" firstAttribute="top" secondItem="5el-21-aCV" secondAttribute="bottom" constant="8" id="hsY-GO-wQB"/>
                             <constraint firstItem="AW0-iS-MWK" firstAttribute="top" secondItem="1Bl-Pm-tKo" secondAttribute="bottom" constant="8" id="kLt-rh-3dj">
                                 <variation key="widthClass=compact" constant="10"/>
@@ -11196,10 +11195,12 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="400" height="650"/>
                     <connections>
                         <outlet property="bottomConstraintInfoTextFieldBackground" destination="dkJ-dV-AU6" id="29S-aI-LcN"/>
                         <outlet property="closeTextFieldButton" destination="AFR-9k-S7F" id="XgC-Bq-rMB"/>
-                        <outlet property="extraInfoTextField" destination="KD6-2U-aa1" id="dXm-9O-j6M"/>
+                        <outlet property="infoTextView" destination="QZB-DQ-X8H" id="WDd-pa-bmE"/>
                         <outlet property="submitButton" destination="uxJ-d7-vjD" id="ISe-nn-blR"/>
                         <outlet property="thirdParagraphToTopReferenceConstraint" destination="vIA-tF-MZD" id="b8d-Gt-P5q"/>
                         <outlet property="topConstraintInfoTextFieldBackground" destination="hW9-w0-x3l" id="ak7-O3-FVb"/>
